2010-11-12  Helder Correia  <helder@sencha.com>

Reviewed by Andreas Kling.

        [Qt] Path::addArc() does not set right angle direction on full arcs
        https://bugs.webkit.org/show_bug.cgi?id=49138

        New test for nonzero winding rule correctness for full arc paths.

        * fast/canvas/canvas-arc-360-winding-expected.txt: Added.
        * fast/canvas/canvas-arc-360-winding.html: Added.
        * fast/canvas/script-tests/canvas-arc-360-winding.js: Added.
2010-11-12  Helder Correia  <helder@sencha.com>

        Reviewed by Andreas Kling.

        [Qt] Path::addArc() does not set right angle direction on full arcs
        https://bugs.webkit.org/show_bug.cgi?id=49138

        Ensure correctness of nonzero winding rule for full arc paths.
        Invert the sign of the span if the direction is counterclockwise.

        Test: fast/canvas/canvas-arc-360-winding.html

        * platform/graphics/qt/PathQt.cpp:
        (WebCore::Path::addArc):

Canonical link: https://commits.webkit.org/62410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71936 268f45cc-cd09-0410-ab3c-d52691b4dbfc